--- a/employeeWeb/src/main/resources/templates/employees.html
+++ b/employeeWeb/src/main/resources/templates/employees.html
@@ -18,7 +18,7 @@
     <th>Surname</th>
     <th>Id</th>
     <th>Age</th>
-    <th>Additiona Info</th>
+    <th>Additional Info</th>
   </tr>
   </thead>
   <tbody>
